cmake_minimum_required(VERSION 3.8)
project(online_mesh_mapper)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic -Ofast)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)

find_package(ament_cmake REQUIRED)                                              
find_package(rclcpp REQUIRED)                                                   
find_package(sensor_msgs REQUIRED)                                              
find_package(mesh_msgs REQUIRED)                                                
find_package(nav_msgs REQUIRED)                                                 
find_package(tf2 REQUIRED)                                                      
find_package(tf2_ros REQUIRED)                                                  
find_package(tf2_geometry_msgs REQUIRED)                                        
find_package(geometry_msgs REQUIRED)   
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

add_library(lib_map_model lib/Chunk.c lib/GraphNode.c lib/HashUtils.c
    lib/murmur3.c lib/Vertex.c lib/VoxelGraph.c)     
add_executable(online_mesh_mapper src/online_mesh_mapper.cpp)
target_include_directories(online_mesh_mapper PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(online_mesh_mapper PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17

target_link_libraries(online_mesh_mapper lib_map_model)
ament_target_dependencies(online_mesh_mapper rclcpp sensor_msgs mesh_msgs nav_msgs
    tf2_ros tf2 tf2_geometry_msgs geometry_msgs)
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)
install(TARGETS online_mesh_mapper
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
